--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,10 +1,10 @@
 <resources>
-    <string-array name="tiposGraficos">
-        <item>vectorial</item>
-        <item>bitmap</item>
-        <item>3D</item>
+    <string-array name="tiposCriterios">
+        <item>creación</item>
+        <item>valoracion</item>
+        <item>distancia</item>
     </string-array>
-    <string-array name="tiposGraficosValores">
+    <string-array name="tiposCriteriosValores">
         <item>0</item>
         <item>1</item>
         <item>2</item>
