con Aplication para variables globales

--- a/app/src/main/res/xml/preferencias.xml
+++ b/app/src/main/res/xml/preferencias.xml
@@ -13,9 +13,21 @@
         android:entryValues="@array/tiposCriteriosValores"
         android:defaultValue="1"/>
     <EditTextPreference
-        android:key="lugares"
+        android:key="maximo"
         android:title="máximo de lugares a mostrar"
         android:summary="limita el número de lugares que se pueden mostrar"
         android:inputType="number"
-        android:defaultValue="5"/>
+        android:defaultValue="5 "/>
+    <PreferenceScreen android:title="Notificaciones por correo">
+        <CheckBoxPreference
+            android:key="correo_bool"
+            android:title="notificar por email"
+            android:summary="notificar enviando un email"/>
+        <EditTextPreference
+            android:key="email"
+            android:defaultValue="direccion@gmail.com"
+            android:inputType="textEmailAddress"
+            android:summary="dirección de email para notificar"
+            android:title="email" />
+    </PreferenceScreen>
 </PreferenceScreen>
