--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:padding="@dimen/margen_botones"
-        tools:context=".MainActivity" >
+        tools:context=".presentacion.MainActivity" >
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
