--- a/app/src/main/res/menu/menu_scrolling.xml
+++ b/app/src/main/res/menu/menu_scrolling.xml
@@ -8,4 +8,9 @@
     <item android:title="Acerca de..."
         android:id="@+id/acercaDe"
         android:icon="@android:drawable/ic_menu_info_details"/>
+    <item android:title="Buscar"
+        android:id="@+id/menu_buscar"
+        android:icon="@android:drawable/ic_menu_search"
+        android:orderInCategory="115"
+        app:showAsAction="always|collapseActionView"/>
 </menu>
