--- a/app/src/main/res/layout/vista_lugar.xml
+++ b/app/src/main/res/layout/vista_lugar.xml
@@ -37,7 +37,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:onClick="verMapa">
             <ImageView
                 android:id="@+id/im_direccion"
                 android:layout_width="40dp"
@@ -55,7 +56,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:onClick="llamarTelefono">
             <ImageView
                 android:id="@+id/im_telefono"
                 android:layout_width="40dp"
@@ -73,7 +75,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:onClick="verPgWeb">
             <ImageView
                 android:id="@+id/im_url"
                 android:layout_width="40dp"
